# jaxkineticmodel

./: .gitignore  Batch Bioprocess V2.ipynb  Pollution_model_dev.ipynb  README.md  bound_generation.py  glycolysis_test.ipynb  increasing_speed.py  jax_env.yml  minimal_example.ipynb  mkdocs.yml  needs_profiling.prof  pyproject.toml  requirements.txt  test_assimulo_backwards.ipynb  test_cvode_backwards.py  test_file  test_sbml_loading.py  testing_torch_jit.ipynb  tests.ipynb
analysis/: 0902_projectproposal_olga.ipynb  1602_loss_and parameter_analysis.ipynb  3101_parameterspace_analysis.ipynb  analysis_1.ipynb
batch_bioprocess/: Batch_Bioprocess_Model_p4.py  Batch_Bioprocess_parametersets.csv  initial_parameters.py
batch_bioprocess_p4/: initial_parameters.py  rawdata_batch_bioprocess.csv
data/: .~lock.rawdata_BIOMD0000000507_url.xml_p11.csv#  .~lock.rawdata_Kinetic_glycolysis_assay_model_p13.csv#  rawdata_BIOMD0000000062_url.csv  rawdata_BIOMD0000000062_url.xml_p18.csv  rawdata_BIOMD0000000380.csv  rawdata_BIOMD0000000380_url.xml_p52.csv  rawdata_BIOMD0000000458_url.csv  rawdata_BIOMD0000000458_url.xml_p10.csv  rawdata_BIOMD0000000507_url.xml_p11.csv  rawdata_BIOMD0000000626_url.xml_p20.csv  rawdata_Kinetic glycolysis assay model.sbml_p13.csv  rawdata_POLLU_model.csv  rawdata_batch_bioprocess.csv  rawdata_batch_bioprocess_4p.csv  rawdata_monod_model_9p.csv  rawdata_simple_sbml.csv  rawdata_simple_sbml_p1.csv
datasets/: KIMODATAID30_v1.xlsx
docs/: SBML.md  building_models.md  glycolysis.md  index.md  mkdocs.yml  simulated-DBTL.md  test.md  training_models.md
functions/: cvode.py  cvode_wrapper.py  scipy_cvode_wrapper.py  test_model_sim_cap.ipynb
glycolysis/: fluxes.py  trainer.py
scripts/: test.py  (+32 more)
(+261 files in other folders)
